# k8-s-Auditing-Security-Agent

./: README.md  app.py  k8s_audit_report.md  main.py  pyproject.toml
static/: index.html  script.js
